--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.application.name=customer-service
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.show-sql=true
-server.port=8080
-server.servlet.context-path=/restapi
+#spring.application.name=customer-service
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.show-sql=true
+#server.port=8088
+#server.servlet.context-path=/restapi
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
